--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
     </header>
     <main class="main">
         <section>
-            <img class="img-main" src="images/mainbg.svg">
+            <div class="riktangle">
+                <video class="img-main" src="./images/freezloop.mp4" autoplay muted loop></video>
+            </div>
+            
+            <!-- <img class="img-main" src="images/mainbg.svg"> -->
             <img class="img360"src="./images/mainbg360.svg">
         </section>
         <section class="swiper container">
