--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <main class="main">
         <section>
             <div class="riktangle">
+                <img class="words" src="images/words.svg">
                 <video class="img-main" src="./images/freezloop.mp4" autoplay muted loop></video>
             </div>
             
@@ -133,7 +134,7 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/parallax-mouse@1.0.1/dist/parallax-mouse.min.js"></script>
+    <script id="end" src="https://cdn.jsdelivr.net/npm/parallax-mouse@1.0.1/dist/parallax-mouse.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="index.js"></script>
 </body>
