--- a/index.html
+++ b/index.html
@@ -10,18 +10,23 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <title>Document</title>
+    <script type="text/javascript">
+        {
+        if (screen.width > 1280) document.write ('<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/parallax-mouse@1.0.1/dist/parallax-mouse.min.js"></sc' + 'ript>');
+        }
+        </script>
 </head>
 <body>
     <header class="header">
         
         <div class="header__content">
-            <img src="images/berries-notblur.svg" class="berries p1">
+            <!-- <img src="images/berries-notblur.svg" class="berries p1"> -->
             <img src="images/berries-bigblur.svg" class="berries p2">
-            <img src="images/vegatables-freez.svg" class="berries p3">
+            <!-- <img src="images/vegatables-freez.svg" class="berries p3">
             <img src="images/vegatables.svg" class="berries p4">
             <img src="images/berries-smallblur.svg" class="berries p5">
             <img src="images/vegatables-totfreez.svg" class="berries p6">
-            <img src="images/leaves.svg" class="berries p7">
+            <img src="images/leaves.svg" class="berries p7"> -->
             <div class="header__container">
                 <img class="img-logo" src="images/logo.svg">
             </div>
@@ -134,7 +139,8 @@
             </div>
         </div>
     </div>
-    <script id="end" src="https://cdn.jsdelivr.net/npm/parallax-mouse@1.0.1/dist/parallax-mouse.min.js"></script>
+    
+    <!-- <script src="https://cdn.jsdelivr.net/npm/parallax-mouse@1.0.1/dist/parallax-mouse.min.js"></script> -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="index.js"></script>
 </body>
