--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <header class="header">
         
         <div class="header__content">
-            <!-- <img src="images/berries-notblur.svg" class="berries p1"> -->
+            <img src="images/berries-notblur.svg" class="berries p1">
             <img src="images/berries-bigblur.svg" class="berries p2">
-            <!-- <img src="images/vegatables-freez.svg" class="berries p3">
+            <img src="images/vegatables-freez.svg" class="berries p3">
             <img src="images/vegatables.svg" class="berries p4">
             <img src="images/berries-smallblur.svg" class="berries p5">
             <img src="images/vegatables-totfreez.svg" class="berries p6">
-            <img src="images/leaves.svg" class="berries p7"> -->
+            <img src="images/leaves.svg" class="berries p7">
             <div class="header__container">
                 <img class="img-logo" src="images/logo.svg">
             </div>
