--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./vendor/normalize.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="./css/index.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Roboto+Condensed:wght@400;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/index.css">
+    <title>Свой урожай</title>
 </head>
 <body>
     <header class="header">
@@ -18,15 +19,14 @@
             <img src="images/berries-bigblur.svg" class="berries p2">
             <img src="images/vegatables-freez.png" class="berries p3">
             <img src="images/vegatables.png" class="berries p4">
-            <img src="images/berries-smallblur.svg" class="berries p5"> 
+            <img src="images/berries-smallblur.svg" class="berries p5">
             <img src="images/vegatables-totfreez.svg" class="berries p6">
-            <img src="images/leaves.svg" class="berries p7"> 
+            <img src="images/leaves.svg" class="berries p7">
             <img src="images/leaves-blue.svg" class="berries p8">
             <div class="header__container">
                 <img class="img-logo" src="images/logo.svg">
             </div>
         </div>
-       
     </header>
     <main class="main">
         <section>
@@ -34,39 +34,44 @@
                 <img class="words" src="images/words.svg">
                 <video class="img-main" src="./images/freezloop.mp4" autoplay muted loop></video>
             </div>
-            <img class="img360"src="./images/mainbg360.svg">
+            <img class="img360" src="./images/mainbg360.svg">
         </section>
         <section class="swiper container">
-                <h2 class="swiper__title">Магазины - ритейлеры</h2>
-                <div class="not-swiper">
-                    <ul class="swiper__lists">
-                        <li class="swiper__list"><img class="swiper__chain" src="images/perek.svg" alt="Перекресток"></li>
-                        <li class="swiper__list"><img class="swiper__chain" src="images/okey.svg" alt="Окей"></li>
-                        <li class="swiper__list"><img class="swiper__chain" src="images/diksy.png" alt="Дикси"></li>
-                        <li class="swiper__list"><img class="swiper__chain" src="images/verny.png" alt="Верный"></li>
-                        <li class="swiper__list"><img class="swiper__chain" src="images/pyaterka.png" alt="Пятерочка"></li>
-                        <li class="swiper__list"><img class="swiper__chain" src="images/auchan.svg" alt="Ашан"></li>
-                        <li class="swiper__list"><img class="swiper__chain" src="images/spar.svg" alt="Спар"></li>
-                    </ul>
-                </div>
-                <div class="container-button">
-                    <div class="swiper-object">
-                        <div class="slider__left"></div>
-                        <div class="swiper-container">
-                            <div class="swiper-wrapper">
-                                <div class="swiper-slide"><img class="swiper__chain" src="images/perek.svg" alt="Перекресток"></div>
-                                <div class="swiper-slide"><img class="swiper__chain" src="images/okey.svg" alt="Окей"></div>
-                                <div class="swiper-slide"><img class="swiper__chain" src="images/diksy.png" alt="Дикси"></div>
-                                <div class="swiper-slide"><img class="swiper__chain" src="images/verny.png" alt="Верный"></div>
-                                <div class="swiper-slide"><img class="swiper__chain" src="images/pyaterka.png" alt="Пятерочка"></div>
-                                <div class="swiper-slide"><img class="swiper__chain" src="images/auchan.svg" alt="Ашан"></div>
-                                <div class="swiper-slide"><img class="swiper__chain" src="images/spar.svg" alt="Спар"></div>
+            <h2 class="swiper__title">Магазины - ритейлеры</h2>
+            <div class="not-swiper">
+                <ul class="swiper__lists">
+                    <li class="swiper__list"><img class="swiper__chain" src="images/perek.svg" alt="Перекресток"></li>
+                    <li class="swiper__list"><img class="swiper__chain" src="images/okey.svg" alt="Окей"></li>
+                    <li class="swiper__list"><img class="swiper__chain" src="images/diksy.png" alt="Дикси"></li>
+                    <li class="swiper__list"><img class="swiper__chain" src="images/verny.png" alt="Верный"></li>
+                    <li class="swiper__list"><img class="swiper__chain" src="images/pyaterka.png" alt="Пятерочка"></li>
+                    <li class="swiper__list"><img class="swiper__chain" src="images/auchan.svg" alt="Ашан"></li>
+                    <li class="swiper__list"><img class="swiper__chain" src="images/spar.svg" alt="Спар"></li>
+                </ul>
+            </div>
+            <div class="container-button">
+                <div class="swiper-object">
+                    <div class="slider__left"></div>
+                    <div class="swiper-container">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide"><img class="swiper__chain" src="images/perek.svg"
+                                    alt="Перекресток"></div>
+                            <div class="swiper-slide"><img class="swiper__chain" src="images/okey.svg" alt="Окей"></div>
+                            <div class="swiper-slide"><img class="swiper__chain" src="images/diksy.png" alt="Дикси">
                             </div>
+                            <div class="swiper-slide"><img class="swiper__chain" src="images/verny.png" alt="Верный">
+                            </div>
+                            <div class="swiper-slide"><img class="swiper__chain" src="images/pyaterka.png"
+                                    alt="Пятерочка"></div>
+                            <div class="swiper-slide"><img class="swiper__chain" src="images/auchan.svg" alt="Ашан">
+                            </div>
+                            <div class="swiper-slide"><img class="swiper__chain" src="images/spar.svg" alt="Спар"></div>
                         </div>
-                        <div class="slider__right"></div>
                     </div>
-                    <div class="swiper-pagination pagination__position"></div>
+                    <div class="slider__right"></div>
                 </div>
+                <div class="swiper-pagination pagination__position"></div>
+            </div>
         </section>
         <section class="technologies container">
             <div class="technologies__content">
@@ -95,10 +100,12 @@
                 <ul class="footer__lists">
                     <li class="footer__list">ООО «ИМПАЙС» <br>Офис в Санкт-Петербурге: <br>+7 812-677-00-10</li>
                     <li class="footer__list">Офис в Москве: +7 495-741-13-04<br></li>
-                    <li class="footer__list"><a class="footer__link" href="http://www.impice.ru" target="_blank">www.impice.ru</a></li>
+                    <li class="footer__list"><a class="footer__link" href="http://www.impice.ru"
+                            target="_blank">www.impice.ru</a></li>
                     <li class="footer__list tp">msk@impice.ru</li>
                     <li class="footer__list">ООО «АгроТрейд»:<br> +7 812-244-37-27</li>
-                    <li class="footer__list"><a class="footer__link" href="http://www.agro-trd.ru" target="_blank">www.agro-trd.ru</a></li>
+                    <li class="footer__list"><a class="footer__link" href="http://www.agro-trd.ru"
+                            target="_blank">www.agro-trd.ru</a></li>
                     <li class="footer__list">roman@agro-trd.com</li>
                 </ul>
             </div>
@@ -110,7 +117,8 @@
                 <h3 class="popup__title">Напишите нам</h3>
                 <input class="popup__input _req" name="name" type="text" placeholder="Имя*" value="" required>
                 <label for="before"></label>
-                <input class="popup__input _req" name="address" type="text" placeholder="Адрес магазина*" value="" required>
+                <input class="popup__input _req" name="address" type="text" placeholder="Адрес магазина*" value=""
+                    required>
                 <label for="before"></label>
                 <input class="popup__input" name="theme" type="text" placeholder="Тема" value="">
                 <label for="before"></label>
@@ -121,7 +129,7 @@
                         <label>
                             <input class="popup__file" name="file" type="file" multiple>
                         </label>
-                    </div>    
+                    </div>
                     <button class="popup__button-send" type="submit">Отправить</button>
                 </div>
             </form>
@@ -132,9 +140,9 @@
             </div>
         </div>
     </div>
- 
     <script src="https://cdn.jsdelivr.net/npm/parallax-mouse@1.0.1/dist/parallax-mouse.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="index.js"></script>
 </body>
+
 </html>
