--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Roboto+Condensed:wght@400;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/index.css?v=1.0.3">
     <title>Свой урожай</title>
 </head>
 <body>
@@ -120,7 +120,7 @@
                 <input class="popup__input _req" name="address" type="text" placeholder="Адрес магазина*" value=""
                     required>
                 <label for="before"></label>
-                <input class="popup__input" name="theme" type="text" placeholder="Тема" value="">
+                <input class="popup__input _reqtheme" name="theme" type="text" placeholder="Тема" value="">
                 <label for="before"></label>
                 <textarea class="popup__text" name="message" placeholder="Введите сообщение" value=""></textarea>
                 <div class="button-wrapper">
