--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/parallax-mouse@1.0.1/dist/parallax-mouse.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="index.js"></script>
+    <script src="index.js?v=1.2.3"></script>
 </body>
 
 </html>
