--- a/index.html
+++ b/index.html
@@ -27,12 +27,55 @@
                 <img class="img-logo" src="images/logo.svg">
             </div>
         </div>
+        <div class="header__content1024">
+            <img class="berries-notblur berries" src="images/1024/barries-notblur.svg">
+            <img class="vegatables berries" src="images/1024/vegatables.svg">
+            <img class="blueberry berries" src="images/1024/blueberry.svg">
+            <img class="blueberry-bugblur berries" src="images/1024/blueberry-bugblur.svg">
+            <img class="leaves berries" src="images/1024/leaves.svg">
+            <img class="tomato berries" src="images/1024/tomato.png">
+            <img class="tomato-freez berries" src="images/1024/tomato-freez.png">
+            <img class="leaves-blur berries" src="images/1024/leaves-blur.svg">
+            <div class="header__container">
+                <img class="img-logo" src="images/logo.svg">
+            </div>
+        </div>
+        <div class="header__content414">
+            <img class="vegatables berries" src="./images/414/vegatables.svg">
+            <img class="raspberries berries" src="./images/414/raspberries.svg">
+            <img class="blueberry berries" src="./images/414/blueberry.svg">
+            <img class="leaves berries" src="./images/414/leaves.svg">
+            <img class="leaves-blur berries" src="./images/414/leaves-blur.svg">
+            <img class="tomato berries" src="./images/414/tomato.png">
+            <img class="tomato-freez berries" src="./images/414/tomato-freez.png">
+            <img class="bigblur berries" src="./images/414/bigblur.svg">
+            <div class="header__container">
+                <img class="img-logo" src="images/logo.svg">
+            </div>
+        </div>
+        <div class="header__content360">
+            <img class="raspberries berries" src="images/360/berries.svg">
+            <img class="vegatables berries" src="images/360/vegatables.svg">
+            <img class="berries-blur berries" src="images/360/barries-blur.svg">
+            <img class="leaves berries" src="images/360/leaves.svg">
+            <img class="leaves-blur berries" src="images/360/leaves-blur.svg">
+            <img class="tomato berries" src="images/360/tomato.png">
+            <img class="tomato-freez berries" src="images/360/tomato-freez.png">
+            <img class="berroes-bigblur berries" src="images/360/berries-bigblur.svg">
+            <div class="header__container">
+                <img class="img-logo" src="images/logo.svg">
+            </div>
+        </div>
+    
     </header>
     <main class="main">
         <section>
             <div class="riktangle">
                 <img class="words" src="images/words.svg">
                 <video class="img-main" src="./images/freezloop.mp4" autoplay muted loop></video>
+            </div>
+            <div class="riktangle414">
+               <img class="img-main414" src="images/mainbg414.svg">
             </div>
             <img class="img360" src="./images/mainbg360.svg">
         </section>
@@ -77,12 +120,12 @@
             <div class="technologies__content">
                 <p class="technologies__subtitle">
                     Благодаря применению технологии шоковой заморозки<br>
-                    в наших продуктах нет льда. Однако, он может появится<br>
-                    при нарушении условий транспортировки или хранения в магазинах.
+                    в наших продуктах нет льда.&shy; Однако, он может появится<br>
+                    при нарушении&shy; условий транспортировки или хранения&shy; в магазинах.
                 </p>
-                <h2 class="technologies__title">Если найдете хоть льдинку в пакете — пишите нам.</h2>
+                <h2 class="technologies__title">Если найдете хоть льдинку<br> в пакете — пишите нам.</h2>
                 <p class="technologies__subtitle">
-                    Мы проверим логистическую цепочку и сделаем все,<br>
+                    Мы проверим логистическую цепочку и сделаем все,<br >
                     чтобы наша продукция доходила до Вашего стола в первозданном виде!
                 </p>
             </div>
