--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
             <div class="technologies__content">
                 <p class="technologies__subtitle">
                     Благодаря применению технологии шоковой заморозки<br>
-                    в наших продуктах нет льда.&shy; Однако, он может появится<br>
-                    при нарушении&shy; условий транспортировки или хранения&shy; в магазинах.
+                    в наших продуктах нет льда. Однако, он может появится<br>
+                    при нарушении условий транспортировки или хранения в магазинах.
                 </p>
                 <h2 class="technologies__title">Если найдете хоть льдинку<br> в пакете — пишите нам.</h2>
                 <p class="technologies__subtitle">
