--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Roboto+Condensed:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css?v=1.0.3">
+    <link rel="shortcut icon" type="image/png" href="./images/favicon.png">
     <title>Свой урожай</title>
 </head>
 <body>
@@ -50,7 +51,7 @@
             <img class="tomato-freez berries" src="./images/414/tomato-freez.png">
             <img class="bigblur berries" src="./images/414/bigblur.svg">
             <div class="header__container">
-                <img class="img-logo" src="images/logo.svg">
+                <img class="img-logo414" src="images/414/logo414.svg">
             </div>
         </div>
         <div class="header__content360">
@@ -63,7 +64,7 @@
             <img class="tomato-freez berries" src="images/360/tomato-freez.png">
             <img class="berroes-bigblur berries" src="images/360/berries-bigblur.svg">
             <div class="header__container">
-                <img class="img-logo" src="images/logo.svg">
+                <img class="img-logo360" src="images/414/logo414.svg">
             </div>
         </div>
     
