--- a/index.html
+++ b/index.html
@@ -96,15 +96,12 @@
             <div class="container-button">
                 <div class="swiper-object">
                     <div class="slider__left"></div>
-                    <div class="swiper-container">
+                    <div class="image-slider swiper-container">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide"><img class="swiper__chain" src="images/perek.svg"
-                                    alt="Перекресток"></div>
+                            <div class="swiper-slide"><img class="swiper__chain" src="images/perek.svg"alt="Перекресток"></div>
                             <div class="swiper-slide"><img class="swiper__chain" src="images/okey.svg" alt="Окей"></div>
-                            <div class="swiper-slide"><img class="swiper__chain" src="images/diksy.png" alt="Дикси">
-                            </div>
-                            <div class="swiper-slide"><img class="swiper__chain" src="images/verny.png" alt="Верный">
-                            </div>
+                            <div class="swiper-slide"><img class="swiper__chain" src="images/diksy.png" alt="Дикси"></div>
+                            <div class="swiper-slide"><img class="swiper__chain" src="images/verny.png" alt="Верный"></div>
                             <div class="swiper-slide"><img class="swiper__chain" src="images/pyaterka.png"
                                     alt="Пятерочка"></div>
                             <div class="swiper-slide"><img class="swiper__chain" src="images/auchan.svg" alt="Ашан">
