--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
             <img class="bigblur berries" src="./images/414/bigblur.svg">
             <div class="header__container">
                 <img class="img-logo414" src="images/414/logo414.svg">
+                <p class="logo-title414">Продукты «Свой Урожай»<br>
+                    <span>хорошая компания</span> к любому блюду на вашем столе.</p>
             </div>
         </div>
         <div class="header__content360">
