--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
             <img class="berroes-bigblur berries" src="images/360/berries-bigblur.svg">
             <div class="header__container">
                 <img class="img-logo360" src="images/414/logo414.svg">
+                <p class="logo-title414">Продукты «Свой Урожай»<br>
+                    <span>хорошая компания</span> к любому блюду на вашем столе.</p>
             </div>
         </div>
     
