--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
                     <span>хорошая компания</span> к любому блюду на вашем столе.</p>
             </div>
         </div>
-    
     </header>
     <main class="main">
         <section>
@@ -106,10 +105,8 @@
                             <div class="swiper-slide"><img class="swiper__chain" src="images/okey.svg" alt="Окей"></div>
                             <div class="swiper-slide"><img class="swiper__chain" src="images/diksy.png" alt="Дикси"></div>
                             <div class="swiper-slide"><img class="swiper__chain" src="images/verny.png" alt="Верный"></div>
-                            <div class="swiper-slide"><img class="swiper__chain" src="images/pyaterka.png"
-                                    alt="Пятерочка"></div>
-                            <div class="swiper-slide"><img class="swiper__chain" src="images/auchan.svg" alt="Ашан">
-                            </div>
+                            <div class="swiper-slide"><img class="swiper__chain" src="images/pyaterka.png"alt="Пятерочка"></div>
+                            <div class="swiper-slide"><img class="swiper__chain" src="images/auchan.svg" alt="Ашан"></div>
                             <div class="swiper-slide"><img class="swiper__chain" src="images/spar.svg" alt="Спар"></div>
                         </div>
                     </div>
@@ -189,5 +186,4 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="index.js?v=1.2.3"></script>
 </body>
-
 </html>
