--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./vendor/normalize.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="./vendor/normalize.css?v=1.0.1">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css?v=1.0.2" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Roboto+Condensed:wght@400;700&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="./css/index.css?v=1.0.3">
+        rel="stylesheet?v=1.0.3">
+    <link rel="stylesheet" href="./css/index.css?v=1.0.4">
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png">
     <title>Свой урожай</title>
 </head>
@@ -182,8 +182,8 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/parallax-mouse@1.0.1/dist/parallax-mouse.min.js"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/parallax-mouse@1.0.1/dist/parallax-mouse.min.js?v=1.2.1"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js?v=1.2.2"></script>
     <script src="index.js?v=1.2.3"></script>
 </body>
 </html>
