Fix header logo

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./vendor/normalize.css?v=1.0.1">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css?v=1.0.2" />
+    <link rel="stylesheet" href="./vendor/normalize.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Roboto+Condensed:wght@400;700&display=swap"
-        rel="stylesheet?v=1.0.3">
-    <link rel="stylesheet" href="./css/index.css?v=1.0.4">
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/index.css?v=1.0.5">
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png">
     <title>Свой урожай</title>
 </head>
@@ -32,7 +32,7 @@
             <img class="berries-notblur berries" src="images/1024/barries-notblur.svg">
             <img class="vegatables berries" src="images/1024/vegatables.svg">
             <img class="blueberry berries" src="images/1024/blueberry.svg">
-            <img class="blueberry-bugblur berries" src="images/1024/blueberry-bugblur.svg">
+            <img class="blueberry-bugblur berries" src="images/1024/blueberry-bugblur2.svg">
             <img class="leaves berries" src="images/1024/leaves.svg">
             <img class="tomato berries" src="images/1024/tomato.png">
             <img class="tomato-freez berries" src="images/1024/tomato-freez.png">
@@ -51,9 +51,9 @@
             <img class="tomato-freez berries" src="./images/414/tomato-freez.png">
             <img class="bigblur berries" src="./images/414/bigblur.svg">
             <div class="header__container">
-                <img class="img-logo414" src="images/414/logo414.svg">
-                <p class="logo-title414">Продукты «Свой Урожай»<br>
-                    <span>хорошая компания</span> к любому блюду на вашем столе.</p>
+                <img class="img-logo414" src="images/414/text414.svg">
+                <!-- <p class="logo-title414">Продукты «Свой Урожай»<br>
+                <span>хорошая компания</span> к любому блюду на вашем столе.</p> -->
             </div>
         </div>
         <div class="header__content360">
@@ -66,9 +66,9 @@
             <img class="tomato-freez berries" src="images/360/tomato-freez.png">
             <img class="berroes-bigblur berries" src="images/360/berries-bigblur.svg">
             <div class="header__container">
-                <img class="img-logo360" src="images/414/logo414.svg">
-                <p class="logo-title414">Продукты «Свой Урожай»<br>
-                    <span>хорошая компания</span> к любому блюду на вашем столе.</p>
+                <img class="img-logo360" src="images/414/text414.svg">
+                <!-- <p class="logo-title414">Продукты «Свой Урожай»<br>
+                    <span>хорошая компания</span> к любому блюду на вашем столе.</p> -->
             </div>
         </div>
     </header>
@@ -182,8 +182,8 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/parallax-mouse@1.0.1/dist/parallax-mouse.min.js?v=1.2.1"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js?v=1.2.2"></script>
-    <script src="index.js?v=1.2.3"></script>
+    <script src="https://cdn.jsdelivr.net/npm/parallax-mouse@1.0.1/dist/parallax-mouse.min.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="index.js?v=1.0.5"></script>
 </body>
 </html>
