--- a/index.html
+++ b/index.html
@@ -79,9 +79,12 @@
                 <video class="img-main" src="./images/freezloop.mp4" autoplay muted loop></video>
             </div>
             <div class="riktangle414">
-               <img class="img-main414" src="images/mainbg414.svg">
+               <!-- <img class="img-main414" src="./images/414/mainbg4144.svg"> -->
+               <img class="img-main414" src="./images/414/mainbg4146.svg">
+               <!-- <img class="img-main414" src="./images/414/mainbg4145.svg"> -->
+               <!-- <img class="img-main414" src="./images/414/mainbg4143.png"> -->
             </div>
-            <img class="img360" src="./images/mainbg360.svg">
+            <!-- <img class="img360" src="./images/mainbg360.svg"> -->
         </section>
         <section class="swiper container">
             <h2 class="swiper__title">Магазины - ритейлеры</h2>
