--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
             <div class="riktangle414">
                <!-- <img class="img-main414" src="./images/414/mainbg4144.svg"> -->
-               <img class="img-main414" src="./images/414/mainbg4146.svg">
+               <img class="img-main414" src="./images/414/mainbg4144.png">
                <!-- <img class="img-main414" src="./images/414/mainbg4145.svg"> -->
                <!-- <img class="img-main414" src="./images/414/mainbg4143.png"> -->
             </div>
